Fix collection grid overflow style
HCRC-13

--- a/src/core/collection/collection.module.scss
+++ b/src/core/collection/collection.module.scss
@@ -8,6 +8,9 @@
   padding: 0 var(--padding);
   max-width: calc(var(--max-width) - (2 * var(--padding)));
   width: calc(100% - (2 * var(--padding)));
+}
+
+.collectionWrapper.carousel {
   overflow: hidden;
 }
 
